@@ -5,6 +5,7 @@
 	  - add new '--workers' parameter
 	  - add new exit code 23 for thread errors
 	  - require Autoconf Macro Archive (autoconf-archive)
+	* Support restricted rules with empty restriction (closes: #133)
 
 2022-08-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add exit code 22 for memory allocation errors
